# interface_sdk_cangjie

./: .gitattributes  .gitignore  BUILD.gn  README.md  README_zh.md  bundle.json  sdk_cangjie.gni
api/: ohos.ark_interop.cj.d  ohos.ark_interop_helper.cj.d
api/AbilityKit/: ohos.ability.ability_result.cj.d  ohos.ability.cj.d  ohos.ability.connect_options.cj.d  ohos.ability_access_ctrl.cj.d  ohos.ability_delegator_registry.cj.d  ohos.app.ability.ability_constant.cj.d  ohos.app.ability.ability_stage.cj.d  ohos.app.ability.app_recovery.cj.d  ohos.app.ability.cj.d  ohos.app.ability.common.cj.d  ohos.app.ability.completion_handler.cj.d  ohos.app.ability.configuration.cj.d  ohos.app.ability.context_constant.cj.d  ohos.app.ability.dialog_request.cj.d  ohos.app.ability.error_manager.cj.d  ohos.app.ability.start_options.cj.d  ohos.app.ability.ui_ability.cj.d  ohos.app.ability.want.cj.d  ohos.app.ability.want_constant.cj.d  ohos.app.cj.d  ohos.application.error_observer.cj.d  ohos.bundle.bundle_manager.cj.d  ohos.bundle.cj.d  ohos.bundle_manager.cj.d  ohos.element_name.cj.d  ohos.eventhub.cj.d  ohos.metadata.cj.d  ohos.security.permission_request_result.cj.d  ohos.skill.cj.d  ohos.test_runner.cj.d
api/ArkData/: ohos.data.cj.d  ohos.data.data_share_predicates.cj.d  ohos.data.distributed_kv_store.cj.d  ohos.data.preferences.cj.d  ohos.data.relational_store.cj.d  ohos.data.values_bucket.cj.d  ohos.data_share_predicates.cj.d  ohos.distributed_kv_store.cj.d  ohos.preferences.cj.d  ohos.relational_store.cj.d  ohos.values_bucket.cj.d
api/ArkGraphic2D/: ohos.color_manager.cj.d  ohos.graphics.cj.d  ohos.graphics.color_space_manager.cj.d
api/ArkUI/: ohos.animator.cj.d  ohos.arkui.cj.d  ohos.arkui.component.action_sheet.cj.d  ohos.arkui.component.alert_dialog.cj.d  ohos.arkui.component.alphabet_indexer.cj.d  ohos.arkui.component.badge.cj.d  ohos.arkui.component.blank.cj.d  ohos.arkui.component.button.cj.d  ohos.arkui.component.calendar_picker.cj.d  ohos.arkui.component.canvas.cj.d  ohos.arkui.component.checkbox.cj.d  ohos.arkui.component.checkbox_group.cj.d  ohos.arkui.component.circle.cj.d  ohos.arkui.component.cj.d  ohos.arkui.component.column.cj.d  ohos.arkui.component.column_split.cj.d  ohos.arkui.component.common.cj.d  ohos.arkui.component.counter.cj.d  ohos.arkui.component.cursor_control.cj.d  ohos.arkui.component.custom_component.cj.d  ohos.arkui.component.custom_dialog.cj.d  ohos.arkui.component.custom_view.cj.d  ohos.arkui.component.data_panel.cj.d  ohos.arkui.component.date_picker.cj.d  ohos.arkui.component.divider.cj.d  ohos.arkui.component.ellipse.cj.d  ohos.arkui.component.flex.cj.d  ohos.arkui.component.focus_control.cj.d  ohos.arkui.component.for_each.cj.d  ohos.arkui.component.gauge.cj.d  ohos.arkui.component.grid.cj.d  ohos.arkui.component.grid_col.cj.d  ohos.arkui.component.grid_item.cj.d  ohos.arkui.component.grid_row.cj.d  ohos.arkui.component.hyperlink.cj.d  ohos.arkui.component.image.cj.d  ohos.arkui.component.image_animator.cj.d  ohos.arkui.component.image_span.cj.d  ohos.arkui.component.lazy_for_each.cj.d  ohos.arkui.component.line.cj.d  (+77 more)
api/ArkUIKit/: ohos.animator.cj.d  ohos.arkui.cj.d  ohos.arkui.component.action_sheet.cj.d  ohos.arkui.component.alphabet_indexer.cj.d  ohos.arkui.component.badge.cj.d  ohos.arkui.component.blank.cj.d  ohos.arkui.component.button.cj.d  ohos.arkui.component.calendar_picker.cj.d  ohos.arkui.component.checkbox.cj.d  ohos.arkui.component.checkbox_group.cj.d  ohos.arkui.component.circle.cj.d  ohos.arkui.component.cj.d  ohos.arkui.component.common.cj.d  ohos.arkui.component.counter.cj.d  ohos.arkui.component.cursor_control.cj.d  ohos.arkui.component.custom_dialog.cj.d  ohos.arkui.component.custom_view.cj.d  ohos.arkui.component.data_panel.cj.d  ohos.arkui.component.date_picker.cj.d  ohos.arkui.component.divider.cj.d  ohos.arkui.component.ellipse.cj.d  ohos.arkui.component.empty_component.cj.d  ohos.arkui.component.for_each.cj.d  ohos.arkui.component.gauge.cj.d  ohos.arkui.component.grid.cj.d  ohos.arkui.component.grid_col.cj.d  ohos.arkui.component.grid_item.cj.d  ohos.arkui.component.grid_row.cj.d  ohos.arkui.component.hyperlink.cj.d  ohos.arkui.component.ifcomponent.cj.d  ohos.arkui.component.image_span.cj.d  ohos.arkui.component.lazy_for_each.cj.d  ohos.arkui.component.line.cj.d  ohos.arkui.component.list.cj.d  ohos.arkui.component.list_item_group.cj.d  ohos.arkui.component.loading_progress.cj.d  ohos.arkui.component.menu.cj.d  ohos.arkui.component.menu_item_group.cj.d  ohos.arkui.component.native_struct.cj.d  ohos.arkui.component.page_transition.cj.d  (+46 more)
api/ArkWeb/: ohos.web.cj.d  ohos.web.webview.cj.d  ohos.webview.cj.d
api/BasicServiceKit/: ohos.battery_info.cj.d  ohos.common_event_data.cj.d  ohos.common_event_manager.cj.d  ohos.common_event_publish_data.cj.d  ohos.common_event_subscribe_info.cj.d  ohos.common_event_subscriber.cj.d  ohos.device_info.cj.d  ohos.request.agent.cj.d  ohos.request.cj.d  ohos.settings.cj.d  ohos.system_date_time.cj.d  ohos.value_type.cj.d
api/CameraKit/: ohos.multimedia.camera.cj.d
api/Cangjie/: ohos.ark_interop.cj.d  ohos.ark_interop_helper.cj.d  ohos.ark_interop_macro.cj.d  ohos.business_exception.cj.d  ohos.callback_invoke.cj.d  ohos.ffi.cj.d  ohos.labels.cj.d
api/CangjieKIt/: ohos.ffi.cj.d
api/ConnectivityKit/: ohos.bluetooth.a2dp.cj.d  ohos.bluetooth.baseProfile.cj.d  ohos.bluetooth.base_profile.cj.d  ohos.bluetooth.ble.cj.d  ohos.bluetooth.cj.d  ohos.bluetooth.connection.cj.d  ohos.bluetooth.constant.cj.d  (+2 more)
docs/: cangjie_sdk_build_guide.md
kits/: CangjieKit.cj.d  kit.AbilityKit.cj.d  kit.ArkData.cj.d  kit.ArkGraphics2D.cj.d  kit.ArkUI.cj.d  kit.ArkWeb.cj.d  kit.Arkweb.cj.d  kit.BasicServicesKit.cj.d  kit.CameraKit.cj.d  kit.CangjieKit.cj.d  kit.ConnectivityKit.cj.d  kit.CoreFileKit.cj.d  kit.CryptoArchitectureKit.cj.d  kit.IPCKit.cj.d  kit.ImageKit.cj.d  kit.LocalizationKit.cj.d  kit.LocationKit.cj.d  kit.MediaKit.cj.d  kit.MediaLibraryKit.cj.d  kit.NetworkKit.cj.d  kit.PerformanceAnalysisKit.cj.d  kit.SensorServiceKit.cj.d  kit.TelephonyKit.cj.d  kit.TestKit.cj.d  kit.UniversalKeystoreKit.cj.d
(+561 files in other folders)
